--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
                 <a class="navbar-brand" href="index.html">
-                    <span class="fa fa-lightbulb"></span> 民族数据分析
+                    <span class="fa fa-lightbulb"></span> 黄牛数据分析
                 </a>
             </h1>
             <button class="navbar-toggler  collapsed bg-gradient" type="button" data-bs-toggle="collapse"
